--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,11 +18,12 @@ assets = [
 maintainer-scripts = "debian/scripts"
 
 [dependencies]
-tokio = { version = "1.28", features = ["rt", "macros", "time"] }
+tokio = { version = "1.29", features = ["rt", "rt-multi-thread", "macros", "time"] }
 tokio-modbus = { version = "0.7", default-features = false, features = ["rtu"] }
-tokio-serial = "5.4.1"
+tokio-serial = "5.4"
+futures = "0.3"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 reqwest = { version = "0.11", features = ["json"] }
-clap = { version = "4.2", features = ["derive"] }
+clap = { version = "4.3", features = ["derive"] }
