--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ assets = [
 maintainer-scripts = "debian/scripts"
 
 [dependencies]
-tokio = { version = "1.29", features = ["rt", "rt-multi-thread", "macros", "time"] }
+tokio = { version = "1.29", features = ["rt", "rt-multi-thread", "macros", "time", "fs"] }
 tokio-modbus = { version = "0.7", default-features = false, features = ["rtu"] }
 tokio-serial = "5.4"
 futures = "0.3"
