--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "rszurro"
 authors = ["Giuseppe Corti <giuseppe.corti@protonmail.com>"]
 license = "MIT"
-version = "0.2.0"
+version = "0.2.1"
 edition = "2021"
 
 [package.metadata.deb]
@@ -28,3 +28,4 @@ serde_json = "1.0"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 clap = { version = "4.3", features = ["derive"] }
 lm-sensors = "0.1"
+tokio-gpiod = "0.2"
