--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,13 +19,20 @@ maintainer-scripts = "debian/scripts"
 
 [dependencies]
 tokio = { version = "1.29", features = ["rt", "rt-multi-thread", "macros", "time", "fs"] }
-tokio-modbus = { version = "0.7", default-features = false, features = ["rtu"] }
-tokio-serial = "5.4"
+tokio-modbus = { version = "0.7", default-features = false, features = ["rtu"], optional = true }
+tokio-serial = { version = "5.4", optional = true }
 futures = "0.3"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 clap = { version = "4.3", features = ["derive"] }
-lm-sensors = "0.1"
-tokio-gpiod = "0.2"
+lm-sensors = { version = "0.1", optional = true }
+tokio-gpiod = { version = "0.2", optional = true}
+
+[features]
+default = ["modbus-rtu","sysinfo","lmsensors","gpio"]
+modbus-rtu = ["dep:tokio-modbus","dep:tokio-serial"]
+sysinfo = []
+lmsensors = ["dep:lm-sensors"]
+gpio = ["dep:tokio-gpiod"]
