--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "rszurro"
 authors = ["Giuseppe Corti <giuseppe.corti@protonmail.com>"]
 license = "MIT"
-version = "0.2.1"
+version = "0.3.1"
 edition = "2021"
 
 [package.metadata.deb]
@@ -18,17 +18,19 @@ assets = [
 maintainer-scripts = "debian/scripts"
 
 [dependencies]
-tokio = { version = "1.29", features = ["rt", "rt-multi-thread", "macros", "time", "fs"] }
-tokio-modbus = { version = "0.7", default-features = false, features = ["rtu"], optional = true }
+tokio = { version = "1.34", features = ["rt", "rt-multi-thread", "macros", "time", "fs", "sync"] }
+tokio-modbus = { version = "0.9", default-features = false, features = ["rtu"], optional = true }
 tokio-serial = { version = "5.4", optional = true }
 futures = "0.3"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
-reqwest = { version = "0.11", features = ["blocking", "json"] }
-clap = { version = "4.3", features = ["derive"] }
+log = "0.4"
+env_logger = "0.10"
+reqwest = { version = "0.11", features = ["json"] }
+clap = { version = "4.4", features = ["derive"] }
 lm-sensors = { version = "0.1", optional = true }
-tokio-gpiod = { version = "0.2", optional = true}
+tokio-gpiod = { version = "0.2", optional = true }
 
 [features]
 default = ["modbus-rtu","sysinfo","lmsensors","gpio"]
