--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ futures = "0.3"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+serde_yaml = "0.9"
 log = "0.4"
 env_logger = "0.10"
 reqwest = { version = "0.11", features = ["json"] }
