--- a/debian/rszurro.service
+++ b/debian/rszurro.service
@@ -5,7 +5,7 @@ After=multi-user.target
 [Service]
 Type=simple
 Restart=always
-ExecStart=/usr/bin/rszurro /etc/rszurro/config.json
+ExecStart=/usr/bin/rszurro /etc/rszurro/config.yaml
 
 [Install]
 WantedBy=multi-user.target
