--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,23 +18,23 @@ assets = [
 maintainer-scripts = "debian/scripts"
 
 [dependencies]
-tokio = { version = "1.34", features = ["rt", "rt-multi-thread", "macros", "time", "fs", "sync"] }
-tokio-modbus = { version = "0.9", default-features = false, features = ["rtu"], optional = true }
+tokio = { version = "1.35", features = ["rt", "rt-multi-thread", "macros", "time", "fs", "sync"] }
+tokio-modbus = { version = "0.10", default-features = false, features = ["rtu"], optional = true }
 tokio-serial = { version = "5.4", optional = true }
+tokio-gpiod = { version = "0.2", optional = true }
 futures = "0.3"
 serde = "1.0"
 serde_derive = "1.0"
-serde_json = "1.0"
+serde_json = { version = "1.0", optional = true }
 serde_yaml = "0.9"
 log = "0.4"
-env_logger = "0.10"
+env_logger = "0.11"
 clap = { version = "4.4", features = ["derive"] }
 reqwest = { version = "0.11", features = ["json"], optional = true }
-lm-sensors = { version = "0.1", optional = true }
-tokio-gpiod = { version = "0.2", optional = true }
+lm-sensors = { version = "0.2", optional = true }
 
 [features]
-default = ["modbus-rtu","sysinfo","lmsensors","gpio", "homeassistant"]
+default = ["modbus-rtu", "sysinfo", "lmsensors", "gpio", "homeassistant"]
 modbus-rtu = ["dep:tokio-modbus","dep:tokio-serial"]
 sysinfo = []
 lmsensors = ["dep:lm-sensors"]
